Finished navbar and fixed misalignments with content. Completed styling for now

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,67 +1,88 @@
 .App {
     text-align: center;
     display: flex;
-    width: 105%;
+    width: 100%;
 }
 
-.link {
+.about, .projects, .theses, .contact {
+    width: 100%;
+    margin-bottom: 25px;
+    padding: 15px;
+}
+
+.link, .link-viewed {
     text-decoration: none;
     padding: 20px 20px;
     font-weight: 700;
     font-size: large;
+    background-color: #222326;
+
+}
+
+.link-viewed {
+    font-weight: 400;
+    color: #3366CC;
+}
+
+.main, .navbar, .navbar > h1, .navbar > h2, .navbar > ul {
+    background-color: #222326;
 }
 
 .main {
     width: 25%;
     height: 100%;
     position: fixed;
+    top: 0;
+    left: 0;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .content {
-    width: 40%;
-    margin-left: 40%;
+    width: 60%;
+    margin-top: 5%;
+    margin-left: 30%;
+
+    display: flex;
+    flex-direction: column;
+    text-align: left;
   }
 
-.projects, .theses, .contact {
-    /* margin: 100px; */
-    /* width: 105%; */
-}
-
-.home {
-    height: 600px;
+.aboutContainer, .projectContainer{
     display: flex;
-}
+    flex-direction: column; 
+} 
 
-.about {
-    /* height: 600px; */
-    display: flex;
+.projectContainer {
+    align-items: center;
+} 
+
+.projectTitle, .aboutTitle, .thesesTitle {
     text-align: left;
-}
-
-.projects {
-    display: flex;
-    justify-content: left;
-}
-
-.theses {
-    /* height: 600px; */
-    display: flex;
+    width: 100%;
+    margin-bottom: 20px;
 }
 
 .contact {
-    /* height: 600px; */
     display: flex;
 }
 
 .navbar {
-    width: 125%;
+    display: flex;
+    flex-direction: column;
 }
 
 *, html {
     scroll-behavior: smooth !important;
     font-family: "Rubik", sans-serif;
     background: #333333;
+}
+
+html {
     margin: 25px;
+    height: 100%;
 }
 
 * {
@@ -80,32 +101,33 @@ p {
     font-weight: lighter;
 }
 
-.formContainer {
-    margin: auto auto;
-}
-
-form {
-    padding: 50px;
-    border: 2px solid rgba(51, 102, 204, 0.5);
-    border-radius: 5px;
-}
-
-input, textarea {
-    width: 100%;
-    padding: 20px;
-    border: 1px solid #ffffff;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin: auto auto;
-    margin-bottom: 10px;
-}
-
-textarea {
-    resize: vertical;
-}
-
-input[type="submit"] {
-    width: auto;
+li:hover {
     cursor: pointer;
-    padding: 10px 20px
+    font-weight: normal;
 }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+/* might mess around with this later for mobile devices
+ @media (max-width: 768px) {
+    .main {
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+
+    .navbar {
+        flex-direction: row;
+        justify-content: space-around;
+        width: 100%;
+    }
+
+    .content {
+        width: 100%;
+        margin-left: 0;
+    }
+} */
